--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery.nivo.slider.js"></script>
 	<script type="text/javascript" src="js/jquery.lazyload.js"></script>
+	<script type="text/javascript" src="js/page.js"></script>
 	<script type="text/javascript">
 		$(window).load(function() {
 			$('#slideshow').nivoSlider({
@@ -18,7 +19,7 @@
 				directionNav:true,
 				controlNav:true
 			});
-			$(".image img,#slideshow img").lazyload();
+			$("#slideshow img,.image img").lazyload();
 		});
 	</script>
 </head>
@@ -75,24 +76,26 @@
 		<div class="floor_hd color{$index}">
 			<h3><span class="name">{$category_goods['cname']}</span></h3>
 			<ul class="hotwords">
-				<li><a href="?controller=frontend&action=glist&cid={$key}">可以有更多>></a></li>
+				<li><a href="/?controller=frontend&action=glist&ids=1_{$key}_0_0_0_0">可以有更多>></a></li>
 			</ul>
 		</div>
 		<div  class="row clearfix">
 			{foreach:items=$category_goods item=$goods}
 			{if:$key!=='cname'}
-			<div class="column {if:$key%4==0}last{/if}">
-				<div class="image">
-					<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
-						<img src="img/no_pic.gif" data-original="{$goods['list_img']}" alt="{$goods['name']}" />
-					</a>
-				</div>
-				<p class="pro_price">
-					<strong class="new_price">￥{$goods['sell_price']}</strong>
-					原价：<span class="old_price">{$goods['market_price']}</span>
-				</p>
-				<p><a href="{$goods['url']}" title="{$goods['name']}" target="_blank">{echo:IString::substr($goods['name'],25,'....')}</a></p>
-				<p class="sub_tip">{$goods['notes']}</p>
+			<div class="column" {if:$key%4==0} style="margin-left:0;"{/if}>
+				<p class="from" style="display:none;">{$goods['bname']}</p>
+				<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
+					<div class="image">
+							<img src="img/no_pic.gif" data-original="{$goods['list_img']}" alt="{$goods['name']}" />
+					</div>
+					<p class="name">{echo:IString::substr($goods['name'],42,'....')}</p>
+					<p class="pro_price">
+						<strong class="new_price">￥{$goods['sell_price']}</strong>
+						原价：<span class="old_price">{$goods['market_price']}</span>
+					</p>
+					<p class="brand">品牌：{$goods['bname']}</p>
+					<p class="volume">销量：{$goods['total_volume']}</p>
+				</a>
 			</div>
 			{/if}
 			{/foreach}
@@ -110,124 +113,6 @@
 	</div>
 </div><!-- // end #fppter -->
 	
-	
 </body>
 </html>
 
-<script type="text/javascript">
-$(function(){
-	// 搜索框
-	showKeyWord();
-	setInterval(function(){
-		showKeyWord();
-	},5*1000);
-	
-	$('#kwInput').blur(function(){
-		var kwValue = $(this).val();
-		if(!kwValue && !placeholderSupport){
-			$('#kwPlaceholder').show();
-		}
-	}).focus(function(){
-		if(  $(this).val() && !placeholderSupport){
-			$('#kwPlaceholder').hide();
-		}	
-	}).keyup(function(){
-		if( !placeholderSupport){
-			if($(this).val()){
-				$('#kwPlaceholder').hide();
-			}else{
-				$('#kwPlaceholder').show();
-			}
-		}
-	});
-	//按了enter键搜索
-	$("#kwInput").keydown(function(event){
-		event=event||window.event;
-		if(event.keyCode==13){
-			goSearch();	
-		}
-	});
-	
-	// 点击搜索
-	$('#searchBtn').click(function(){
-		goSearch();
-	});
-
-	// 热词
-	showHotWords();
-	setInterval(function(){
-		showHotWords();
-	},50*1000);
-});
-var searchUrl = "/?controller=frontend&action=search";
-var testInput = document.createElement("input");
-var placeholderSupport = 1;
-if(!('placeholder' in testInput))
-	placeholderSupport = 0;
-
-// 搜索词显示
-function showKeyWord(){
-	if( typeof(keyword)!='undefined' && keyword ){
-		placeholder = Base.decode(keyword);
-	}
-	if(!placeholder){
-		if(typeof(KEYWORDS)=='undefined' || $('#kwInput:focus').size()>0)
-			return false;
-		var placeholder = '',kwIndex=0;
-		for(var i=0;i<50;i++){
-			kwIndex = parseInt(Math.random()*10);
-			if(KEYWORDS[kwIndex]){
-				placeholder = KEYWORDS[kwIndex];
-				break;
-			}
-		}
-	}
-	if(placeholderSupport){
-		$('#kwInput').attr('placeholder',placeholder);
-	}else{
-		$('#kwPlaceholder').html(placeholder).show();
-	}
-}
-
-// 热词显示
-function showHotWords(){
-	if(typeof(KEYWORDS)=='undefined')
-		return false;
-	var hwIndexArr = {},hotLinks='热搜：',separator = '',validWordNum = 0;
-	for(var i=0;validWordNum<4;i++){
-		var hwIndex = parseInt(Math.random()*100);
-		
-		if(!hwIndexArr.hwIndex && KEYWORDS[hwIndex]){
-			hwIndexArr[i] = hwIndex;
-			hotWord = KEYWORDS[hwIndex];
-			hotLinks += separator+'<a href="'+searchUrl+'&kwInput='+encodeURIComponent(hotWord)+'" target="_blank" title="'+hotWord+'" >'+hotWord+'</a>';
-			separator = '&nbsp;&nbsp;';
-			validWordNum +=1;
-		}
-		if(validWordNum>100)
-			break;	
-	}
-	$('#hotWords').html(hotLinks);
-}
-
-function goSearch(){
-	var kwValue = $('#kwInput').val();
-	if(!kwValue){
-		if(placeholderSupport){
-			kwValue = $('#kwInput').attr('placeholder');
-		}else{
-			kwValue = $('#kwPlaceholder').html();
-		}
-	}
-	// 首页新开窗口
-	if(document.location.host=='www.utao.info' && document.location.search =='' ){
-		window.open(searchUrl+'&kw='+encodeURIComponent(kwValue));
-		return false;
-	}else{
-		document.location.href = searchUrl+'&kw='+encodeURIComponent(kwValue);
-		return false;
-	}
-}
-
-
-</script>
