--- a/css/style.css
+++ b/css/style.css
@@ -86,14 +86,14 @@ input:-ms-input-placeholder{color:#ccc;}
 
 /*** 列表项 ***/
 .row .column {background:#efefef;position: relative; -moz-box-shadow: 0 0 2px #ccc; -webkit-box-shadow: 0 0 2px #ccc; box-shadow: 0 0 5px #ccc; float: left; margin-left:45px;margin-bottom: 25px; width: 220px;height: 300px; }
-.row .column:hover{-moz-box-shadow: 0 0 5px #3EAF0E; -webkit-box-shadow: 0 0 5px#3EAF0E; box-shadow: 0 0 5px #3EAF0E;}
+.row .column:hover{cursor:pointer;-moz-box-shadow: 0 0 5px #3EAF0E; -webkit-box-shadow: 0 0 5px#3EAF0E; box-shadow: 0 0 5px #3EAF0E;}
 .row .column .last { margin-left: 0px; }
 .row .column a{text-decoration: none;}
 .row .column p{padding: 5px;}
 .row .column .volume,.name,.from,.brand{position: absolute;}
 .row .column .from{left:0px;top: 0px;background:#3EAF0E;height: 18px;color: #FFF; }
-.row .column .name{left:0;bottom: 30px;width: 210px;height: 100%;filter: alpha(opacity=0);-khtml-opacity: 0;-moz-opacity: 0;opacity: 0;background: rgba(255, 255, 255, 0.7);border-top: 1px solid rgba(0, 0, 0, 0.1);-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;transition: all 0.3s ease-out;}
-.row .column:hover .name{height: 45px;bottom: 80px;filter: alpha(opacity=1);-khtml-opacity: 1;-moz-opacity: 1;opacity:1;}
+.row .column .name{left:0;bottom: 0px;width: 210px;height:300px;filter: alpha(opacity=0);-khtml-opacity: 0;-moz-opacity: 0;opacity: 0;background: rgba(255, 255, 255, 0.7);border-top: 1px solid rgba(0, 0, 0, 0.1);-webkit-transition: all 0.3s ease-out;-moz-transition: all 0.3s ease-out;transition: all 0.3s ease-out;}
+.row .column:hover .name{height: 40px;bottom: 80px;filter: alpha(opacity=1);-khtml-opacity: 1;-moz-opacity: 1;opacity:1;}
 .row .column .image { height: 220px; width: 220px; margin-bottom: 2px; overflow: hidden; }
 .row .column .image img{ height:220px;width:220px;}
 .row .column .pro_price {color: #636362;}
@@ -112,6 +112,7 @@ input:-ms-input-placeholder{color:#ccc;}
 .color2{border-bottom-color: #FF4949;color: #FF4949;}
 .color3{border-bottom-color: #FFAD2D;color: #FFAD2D;}
 .color4{border-bottom-color: #B782E3;color: #B782E3;}
+.color5{border-bottom-color: #3EAF0E;color: #3EAF0E;}
 .hotwords {position: absolute;bottom: 10px;right: -5px;}
 .hotwords li {float: left;padding: 0 8px;border-right: 1px #444 solid;color: #444;font-family: Tahoma;}
 
@@ -153,12 +154,11 @@ background-color: #3EAF0E;color: white;text-decoration: none;}
 .sort .tabitem a.active {cursor: default;height: 33px;color: #3AA50D;font-weight: bold;background: #f0f0f0;}
 
 
-
 /*** pagination  ***/
 .jPaginate{height:34px; position:relative;color:#a5a5a5; font-size: 1.2em;width:100%;}
 .jPaginate a{line-height:15px;height:18px;cursor:pointer;padding:2px 10px; margin:2px;}
-.jPag-control-back{     position:absolute;left:0px;}
-.jPag-control-front{position:absolute;top:0px;}
+.jPag-control-back{ position:absolute;left:0;top:2px;}
+.jPag-control-front{position:absolute;top:2px;}
 .jPaginate span{font-size: 1.2em;cursor:pointer;}
 .jPaginate ul.jPag-pages{float:left;list-style-type:none;  margin:0px 0px 0px 0px;  padding:0px;}
 .jPaginate ul.jPag-pages li{display:inline;float:left;padding:0px;margin:0px;}
