--- a/views/default/frontend/glist - 副本.html
+++ b/views/default/frontend/glist - 副本.html
@@ -1,3 +1,55 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="description" content="{$description}" />
+	<meta name="keywords" content="{$keywords}" />
+	<title>列表页面</title>	
+	<link href="css/style.css" rel="stylesheet" type="text/css" />	
+	<link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
+	<!--[if IE]><link href="css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
+	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.lazyload.js"></script>
+	<script type="text/javascript" src="js/jquery.paginate.js"></script>
+	<script type="text/javascript" src="js/page.js"></script>
+</head>
+<body>
+
+<div class="header">
+	<div class="container">
+		<h1 style="margin:0;">
+			<a href="/" title="utao">
+				<img style="width:120p;height:50px;" src="img/logo.gif" alt="utao" />
+			</a>
+		</h1>
+		<div class="z_b_wrap">
+			<div class="z_txtwrap">
+				<span class="z_s_l"></span>
+				<span class="z_s_r"></span>
+				<span class="text">
+					<span name="kwPlaceholder" class="z_input_lab" style="display:none;"></span>
+					<input id="kwInput" value="{$kw}" placeholder="" name="" type="text">
+				</span>
+			</div>
+			<a class="z_btn_bf" id="searchBtn" href="javascript:;" title="播放" onclick="return false;">搜索</a>
+		</div>
+	</div>
+</div>
+<!-- // end #header -->
+<div class="nav">
+	<div class="container">
+		{if:$this->guide_list}
+		<ul class="menu fl">
+			<li><a href="/" title="首页" >首页</a></li>
+			{foreach:items=$this->guide_list}	
+			<li ><a href="{$item['link']}" title="{$item['name']}" >{$item['name']}</a></li>
+			{/foreach}
+		</ul>
+		{/if}
+	</div>
+</div>
+<!-- // end nav -->
+
 <div class="main">
 	<div class="container">
 		{if:$kw}
@@ -90,9 +142,9 @@
 						<strong class="new_price">￥{$goods['sell_price']}</strong>
 						原价：<span class="old_price">{$goods['market_price']}</span>
 					</p>
+					<p class="brand">品牌：{$goods['bname']}</p>
+					<p class="volume">销量：{$goods['total_volume']}</p>
 				</a>
-				<p class="volume">销量：{$goods['total_volume']}</p>
-				<p class="brand">品牌：<a href="{url:/frontend/glist/ids/0_0_0_0_$goods[brand_id]_0/kw/0}">{$goods['bname']}</a></p>
 			</div>
 			{/foreach}
 		</div>
@@ -108,6 +160,17 @@
 		{/if}
 	</div>
 </div><!-- // end #main -->
+
+<div class="footer">
+	<div class="container">
+		<div class="footer">
+			<p>www.utao.info 优淘 Copyright © 2012-2013</p>
+		</div>
+	</div>
+</div><!-- // end #fppter -->
+	
+</body>
+</html>
 
 <script type="text/javascript">
 $(function(){
@@ -150,3 +213,9 @@ $(function(){
 
 });
 </script>
+<p style="display:none;">
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F60d2ec0a4398cdc9ae7bf4aa6dd174d0' type='text/javascript'%3E%3C/script%3E"));
+</script>
+</p>
