--- a/views/default/frontend/glist.html
+++ b/views/default/frontend/glist.html
@@ -14,10 +14,10 @@
 						<dt>类别：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_0_{$forth_cid}_{$bid}_{$prid}&kw={$kw}">全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_0_{$forth_cid}_{$bid}_{$prid}&kw={$kw}">全部</a></strong></dt>
 								{foreach:items=$subcat item=$cat}
 
-								<dd><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$cat['id']}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}" >{$cat['name']}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$cat['id']}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}" >{$cat['name']}</a></dd>
 
 								{/foreach}
 							</dl>
@@ -33,9 +33,9 @@
 						<dt>品牌：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_0_{$prid}&kw={$kw}">全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?kw={$kw}&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_0_{$prid}">全部</a></strong></dt>
 								{foreach:items=$brands item=$brand}
-								<dd><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$brand['id']}_{$prid}&kw={$kw}" >{$brand['name']}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$brand['id']}_{$prid}&kw={$kw}" >{$brand['name']}</a></dd>
 								{/foreach}
 								
 							</dl>
@@ -51,11 +51,11 @@
 						<dt>价格：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}" >全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}" >全部</a></strong></dt>
 								{foreach:items=$price_range item=$range}
 								{if:$key!=0}
 								{set:$currentRange= $range-1;}
-								<dd><a href="/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$key}&kw={$kw}" >{$lastRange}-{$currentRange}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$key}&kw={$kw}" >{$lastRange}-{$currentRange}</a></dd>
 								{/if}
 								{set:$lastRange=$range}
 								{/foreach}
@@ -92,7 +92,7 @@
 					</p>
 				</a>
 				<p class="volume">销量：{$goods['total_volume']}</p>
-				<p class="brand">品牌：<a href="{url:/frontend/glist/ids/0_0_0_0_$goods[brand_id]_0/kw/0}">{$goods['bname']}</a></p>
+				<p class="brand">品牌：<a href="/glist.html?ids=0_0_0_0_$goods[brand_id]_0&kw={$kw}">{$goods['bname']}</a></p>
 			</div>
 			{/foreach}
 		</div>
@@ -139,7 +139,8 @@ $(function(){
 		images					: false,
 		mouse					: 'press',
 		onChange				: function(page){
-			document.location.href = "/?controller=frontend&action=glist&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&page="+(page-1);
+			document.location.href = "/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&page="+(page-1);
+
 			return false;
 		}
 	});
