--- a/views/default/goods/goods_add.html
+++ b/views/default/goods/goods_add.html
@@ -361,7 +361,7 @@
 									<td><input class="tiny" name="store_nums" id="store_nums" type="text" value="100" pattern="int"/></td>
 									<td><input class="tiny" name="market_price" id="market_price" type="text" value="" pattern="float" empty/></td>
 									<td><input class="tiny" name="sell_price" id="sell_price" type="text" id="sell_price" value="" pattern="float" empty/><button class="btn" type="button" onclick="memPrice('g');"><span class="add">会员价格</span></button></td>
-									<td><input class="tiny" name="cost_price" id="cost_price" type="text" value="" pattern="float" empty/></td>
+									<td><input class="tiny" name="discount" id="discount" type="text" value="" pattern="float" empty/></td>
 									<td><input class="tiny" name="weight" id="weight" type="text" value="" pattern="float" empty /><em>克(g)</em></td>
 								</tr>
 								</thead>
