--- a/views/default/goods/goods_edit.html
+++ b/views/default/goods/goods_edit.html
@@ -410,7 +410,7 @@
 								<td><input class="tiny" name="store_nums" id="store_nums" type="text" value="{$form['store_nums']}" pattern="int"/></td>
 								<td><input class="tiny" name="market_price" id="market_price" type="text" value="{$form['market_price']}" pattern="float" empty/></td>
 								<td><input class="tiny" name="sell_price" id="sell_price" type="text" id="sell_price" value="{$form['sell_price']}" pattern="float" empty/><button class="btn" type="button" onclick="memPrice('g','g');"><span class="add">会员价格</span></button></td>
-								<td><input class="tiny" name="cost_price" id="cost_price" type="text" value="{$form['cost_price']}" pattern="float" empty/></td>
+								<td><input class="tiny" name="discount" id="discount" type="text" value="{$form['discount']}" pattern="float" empty/></td>
 								<td><input class="tiny" name="weight" id="weight" type="text" value="{$form['weight']}" pattern="float" empty /><em>克(g)</em></td>
 							</tr>
 							</thead>
