--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="{$description}" />
-	<meta name="keywords" content="{$keywords}" />
-	<title>{$title}</title>	
+	<meta name="description" content="{if:$description}{$description}{else:}优淘网提供最可靠、最好口碑的数百个品牌的母婴用品, 致力于帮助广大妈咪们安全便捷地选购奶粉、纸尿裤、童鞋童装、辅食、营养品、服饰、孕妇用品等母婴用品。{/if}" />
+	<meta name="keywords" content="{if:$keywords}{$keywords}{else:}优淘网, 母婴, 品牌, 安全购物, 健康, 小屁孩,导购{/if}" />
+	<title>{if:$title}{$title}{else:}优淘(www.utao.info) - 优质健康安全母婴品牌用品，尽在优淘导购平台{/if}</title>	
 	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
 	<!--[if IE]><link href="css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
