--- a/views/default/frontend/glist.html
+++ b/views/default/frontend/glist.html
@@ -14,10 +14,10 @@
 						<dt>类别：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_0_{$forth_cid}_{$bid}_{$prid}&kw={$kw}">全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_0_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&sort={$sort}">全部</a></strong></dt>
 								{foreach:items=$subcat item=$cat}
 
-								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$cat['id']}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}" >{$cat['name']}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$cat['id']}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&sort={$sort}" >{$cat['name']}</a></dd>
 
 								{/foreach}
 							</dl>
@@ -33,9 +33,9 @@
 						<dt>品牌：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/glist.html?kw={$kw}&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_0_{$prid}">全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?kw={$kw}&ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_0_{$prid}&sort={$sort}">全部</a></strong></dt>
 								{foreach:items=$brands item=$brand}
-								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$brand['id']}_{$prid}&kw={$kw}" >{$brand['name']}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$brand['id']}_{$prid}&kw={$kw}&sort={$sort}" >{$brand['name']}</a></dd>
 								{/foreach}
 								
 							</dl>
@@ -51,11 +51,11 @@
 						<dt>价格：</dt>
 						<dd>
 							<dl>
-								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}" >全部</a></strong></dt>
+								<dt><strong><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}&sort={$sort}" >全部</a></strong></dt>
 								{foreach:items=$price_range item=$range}
 								{if:$key!=0}
 								{set:$currentRange= $range-1;}
-								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$key}&kw={$kw}" >{$lastRange}-{$currentRange}</a></dd>
+								<dd><a href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$key}&kw={$kw}&sort={$sort}" >{$lastRange}-{$currentRange}</a></dd>
 								{/if}
 								{set:$lastRange=$range}
 								{/foreach}
@@ -69,11 +69,12 @@
 		</div>
 
 		{if:count($goods_list)}
-		<div style="display:none;">
+		<div style="display:;">
 			<!-- 排序选择 -->
 			<ul class="sort clearfix">	
-				<li class="tabitem"><a href="#" class="on" target="_self">最近上架</a></li>	
-				<li class="tabitem"><a class="active" href="#" target="_self">最受好评</a></li>	
+				<li class="tabitem"><a {if:$sort==0}class="active"{/if} href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}" target="_self">默认排序</a></li>	
+				<li class="tabitem"><a  {if:$sort==1}class="active"{/if} href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}&sort=1"  target="_self">销量高→底</a></li>	
+				<li class="tabitem"><a  {if:$sort==2}class="active"{/if} href="/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_0&kw={$kw}&sort=2"  target="_self">折扣多→少</a></li>
 			</ul>
 		</div>
 		<div class="pagination" style="margin-top:20px;margin-bottom:20px;"></div>
@@ -81,18 +82,26 @@
 			{foreach:items=$goods_list item=$goods}
 			<div class="column" {if:$key%4==0} style="margin-left:0;"{/if}>
 				<p class="from" style="display:none;">{$goods['bname']}</p>
-				<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
+				<a href="/buy.html?gid={$goods['id']}" title="{$goods['name']}" target="_blank">
 					<div class="image">
 							<img src="img/no_pic.gif" data-original="{$goods['list_img']}" alt="{$goods['name']}" />
 					</div>
-					<p class="name">{echo:IString::substr($goods['name'],42,'....')}</p>
+					
 					<p class="pro_price">
-						<strong class="new_price">￥{$goods['sell_price']}</strong>
-						原价：<span class="old_price">{$goods['market_price']}</span>
+						<strong class="new_price">
+							￥{$goods['sell_price']}
+							
+							{if:$goods['discount']<9.5}
+							<span style="color:grey">(</span><span style="color:green">{$goods['discount']}折</span><span style="color:grey">)</span>
+							{/if}
+						</strong>
+						<span class="old_price">￥{$goods['market_price']}</span>
 					</p>
 				</a>
-				<p class="volume">销量：{$goods['total_volume']}</p>
-				<p class="brand">品牌：<a href="/glist.html?ids=0_0_0_0_$goods[brand_id]_0&kw={$kw}">{$goods['bname']}</a></p>
+				<p class="name">{echo:IString::substr($goods['name'],42,'....')}</p>
+				<p class="volume">月销量：{$goods['volume']}</p>
+				<p class="brand">品牌：<a href="/glist.html?ids=0_0_0_0_{$goods['brand_id']}_0&kw={$kw}">{$goods['bname']}</a></p>
+				<p class="gobuy"><a href="/buy.html?gid={$goods['id']}" title="去看看" target="_blank">去看看</a></p>
 			</div>
 			{/foreach}
 		</div>
@@ -139,7 +148,7 @@ $(function(){
 		images					: false,
 		mouse					: 'press',
 		onChange				: function(page){
-			document.location.href = "/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&page="+(page-1);
+			document.location.href = "/glist.html?ids={$top_cid}_{$second_cid}_{$third_cid}_{$forth_cid}_{$bid}_{$prid}&kw={$kw}&sort={$sort}&page="+(page-1);
 
 			return false;
 		}
