--- a/views/default/layouts/frontend.html
+++ b/views/default/layouts/frontend.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="description" content="{if:$description}{$description}{else:}优淘网提供最可靠、最好口碑的数百个品牌的母婴用品, 致力于帮助广大妈咪们安全便捷地选购奶粉、纸尿裤、童鞋童装、辅食、营养品、服饰、孕妇用品等母婴用品。{/if}" />
 	<meta name="keywords" content="{if:$keywords}{$keywords}{else:}优淘网, 母婴, 品牌, 安全购物, 健康, 小屁孩,导购{/if}" />
-	<title>{if:$title}{$title}{else:}优淘(www.utao.info) - 优质健康安全母婴品牌用品，尽在优淘导购平台{/if}</title>	
+	<title>{if:$title}{$title}{else:}优淘(utao.info) - 一个提供优质、健康、安全母婴品牌用品的导购平台{/if}</title>	
 	<link href="css/style.css" rel="stylesheet" type="text/css" />	
 	<link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
 	<!--[if IE]><link href="css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
@@ -19,7 +19,7 @@
 	<div class="container">
 		<h1 style="margin:0;">
 			<a href="/" title="utao">
-				<img style="width:120p;height:50px;" src="img/logo.gif" alt="utao" />
+				<img  src="img/logo.png" alt="utao" />
 			</a>
 		</h1>
 		<div class="z_b_wrap">
@@ -40,7 +40,7 @@
 	<div class="container">
 		{if:$this->guide_list}
 		<ul class="menu fl">
-			<li><a href="/" title="首页" >首页</a></li>
+			<li><a href="/" title="首页">首页</a></li>
 			{foreach:items=$this->guide_list}	
 			<li ><a href="{$item['link']}" title="{$item['name']}" >{$item['name']}</a></li>
 			{/foreach}
@@ -55,7 +55,7 @@
 <div class="footer">
 	<div class="container">
 		<div class="footer">
-			<p>www.utao.info 优淘 Copyright © 2012-2013</p>
+			<p>优淘(utao.info) Copyright © 2012-2013</p>
 		</div>
 	</div>
 </div><!-- // end #fppter -->
